updated github actions